Fix mobile contact map alignment

--- a/css/style.css
+++ b/css/style.css
@@ -919,11 +919,9 @@ ol {
   order: 1;
   width: 100vw;
   max-width: 100vw;
-  margin-right: 0;
-  margin-left: 0;
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
+  margin-right: calc(50% - 50vw);
+  margin-left: calc(50% - 50vw);
+  position: static;
   height: 360px;
   flex: none;
   display: block;
